--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "new:article": "bun scripts/new-article.ts"
   },
   "dependencies": {
+    "@catppuccin/tailwindcss": "^0.1.6",
+    "inquirer": "^12.1.0",
+    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "react-tailwind-variants": "^1.0.2",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "typescript": "^5",
