--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@catppuccin/tailwindcss": "^0.1.6",
+    "chalk": "^5.3.0",
+    "gray-matter": "^4.0.3",
     "inquirer": "^12.1.0",
+    "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-tailwind-variants": "^1.0.2",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "typescript": "^5",
