--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gray-matter": "^4.0.3",
     "inquirer": "^12.1.0",
     "lucide-react": "^0.460.0",
+    "markdown-to-jsx": "^7.7.0",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
