--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "react-tailwind-variants": "^1.0.2",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
+    "twitter-api-v2": "^1.18.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "@types/node": "^22.9.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "^5"
   }
 }
