--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -27,6 +27,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          result-encoding: string
           script: |
-            const script = require('./scripts/post-merge.js')
-            await script({ github, context, core })
+            const { run } = require('./scripts/post-merge.js')
+            await run({ github, context, core })
