--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/github-script@v7
         env: 
           X_API_KEY: ${{ secrets.X_API_KEY }}
-          X_API_SECRET: ${{ secrets.X_API_SECRET }}
+          X_API_KEY_SECRET: ${{ secrets.X_API_KEY_SECRET }}
           X_BEARER_TOKEN: ${{ secrets.X_BEARER_TOKEN }}
           X_ACCESS_TOKEN: ${{ secrets.X_ACCESS_TOKEN }}
           X_ACCESS_TOKEN_SECRET: ${{ secrets.X_ACCESS_TOKEN_SECRET }}
