--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-tailwind-variants": "^1.0.2",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
+    "twit": "^2.2.11",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/node": "^22.9.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/twit": "^2.2.35",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
