--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4",
     "twit": "^2.2.11",
+    "twitter-v2": "^1.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
