--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^22.9.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
