--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "new:article": "bun scripts/new-article.ts"
+    "new:article": "bun scripts/new-article.ts",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.{js,ts,tsx}\"",
+    "format:check": "prettier --ignore-path .gitignore --check \"**/*.{js,ts,tsx}\""
   },
   "dependencies": {
     "@catppuccin/highlightjs": "^1.0.0",
     "@catppuccin/tailwindcss": "^0.1.6",
     "chalk": "^5.3.0",
+    "discord.js": "^14.16.3",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "inquirer": "^12.1.0",
@@ -37,6 +40,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
