--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -1,13 +1,14 @@
 name: Post Merge Action
 
 on:
-  pull_request:
+  pull_request_target:
     types: [closed]
     branches:
       - master
 
 jobs:
   post-merge:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
