--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@catppuccin/tailwindcss": "^0.1.6",
     "chalk": "^5.3.0",
     "discord.js": "^14.16.3",
+    "fuse.js": "^7.0.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
     "inquirer": "^12.1.0",
