fix: nostr nsec

--- a/.github/workflows/post-merge.yml
+++ b/.github/workflows/post-merge.yml
@@ -34,6 +34,7 @@ jobs:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
           BSKY_HANDLE: ${{ secrets.BSKY_HANDLE }}
           BSKY_PASSWORD: ${{ secrets.BSKY_PASSWORD }}
+          NOSTR_NSEC: ${{ secrets.NOSTR_NSEC }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           result-encoding: string
