--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.460.0",
     "markdown-to-jsx": "^7.7.0",
     "next": "15.0.3",
+    "nostr-tools": "^2.10.4",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-tailwind-variants": "^1.0.2",
